# LiquidLauncher

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  copy_gui.py  index.html  liquidlauncher-manifest.rc  package-lock.json  package.json  rust-toolchain.toml  vite.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  launcher.yml  rust.yml
app/: news.json  package-lock.json
app/public/: index.html
app/src/: App.svelte  main.js
app/src/login/: Login.svelte
app/src/main/content/: LaunchArea.svelte  Options.svelte  UpdateContainer.svelte
app/src/main/content/changelogs/: News.svelte
app/src/main/content/social-bar/: ButtonSocial.svelte  ButtonText.svelte  SocialBar.svelte
app/src/main/title-bar/: Account.svelte  Spacer.svelte  TitleBar.svelte
gui/: package-lock.json  rollup.config.js
gui/public/: global.js
gui/src/: App.svelte
gui/src/login/: About.svelte  Login.svelte
gui/src/main/content/: Content.svelte  LaunchArea.svelte
gui/src/main/content/changelogs/: News.svelte  NewsContainer.svelte
gui/src/main/content/social-bar/: ButtonSocial.svelte  ButtonText.svelte
gui/src/main/misc/: ToolTip.svelte
gui/src/main/title-bar/: Account.svelte  ButtonClose.svelte  Logo.svelte
gui/src/utils/: news.js
public/: global.css
src/: App.svelte  app.css  cli.rs  cloud.rs  error.rs  gui.rs  index.html  main.js  main.rs  os.rs  package-lock.json  package.json  prelauncher.rs  utils.rs  vite.config.js  webview_utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: download_view.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/app/: api.rs  app_data.rs  client_api.rs  gui.rs  mod.rs  modrinth.rs  options.rs  webview.rs
src-tauri/src/app/gui/: handler.rs  mod.rs
src-tauri/src/app/gui/commands/: auth.rs  client.rs  data.rs  mod.rs  modrinth.rs  system.rs  vanilla.rs
src-tauri/src/app/network/: client_api.rs  content.rs  mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/minecraft/: auth.rs  jre_downloader.rs  launcher.rs  mod.rs  prelauncher.rs  progress.rs  rule_interpreter.rs  runtime.rs  service.rs  version.rs
src-tauri/src/minecraft/java/: distribution.rs  jre_downloader.rs  mod.rs  runtime.rs
src-tauri/src/minecraft/launcher/: assets.rs  client_jar.rs  jre.rs  libraries.rs  mod.rs
src-tauri/src/utils/: checksum.rs  download.rs  extract.rs  hosts.rs  macros.rs  maven.rs  mod.rs  os.rs  sys.rs
src-tauri/static/: success.html
src/app/: api.rs  app_data.rs  cli.rs  gui.rs  mod.rs  option.rs  webview.rs
src/interface/: cli.rs  gui.rs  mod.rs  options.rs
src/lib/: Window.svelte
src/lib/common/: ButtonClose.svelte  ButtonCopyClipboard.svelte  Logo.svelte  TitleBar.svelte  ToolTip.svelte  VerticalFlexWrapper.svelte
src/lib/common/social/: ButtonIcon.svelte  ButtonIconText.svelte  SocialBar.svelte
src/lib/login/: Facts.svelte  LoginScreen.svelte
src/lib/login/loginmodal/: LoginModal.svelte  ModalButton.svelte  ModalInput.svelte
src/lib/main/: Account.svelte  ButtonLaunchArea.svelte  ButtonVersion.svelte  ContentWrapper.svelte  ErrorScreen.svelte  FirstRunWarning.svelte  LaunchArea.svelte  LoadingScreen.svelte  MainHeader.svelte  MainScreen.svelte  ModrinthSearch.svelte  ModrinthUpdates.svelte  NonSecureConnectionScreen.svelte  VersionSelect.svelte  VersionWarning.svelte
src/lib/main/log/: ClientLog.svelte  LogMessage.svelte  VirtualList.svelte
src/lib/main/news/: News.svelte  NewsArea.svelte
src/lib/main/settings/: DonatorSettings.svelte  GeneralSettings.svelte  PremiumSettings.svelte  Settings.svelte  VanillaIntegration.svelte
src/lib/main/statusbar/: ProgressStatus.svelte  StatusBar.svelte  TextStatus.svelte
src/lib/settings/: ButtonSetting.svelte  CustomModSetting.svelte  Description.svelte  DirectorySelector.svelte  DirectorySelectorSetting.svelte  FileSelectorSetting.svelte  IconButtonSetting.svelte  LauncherVersion.svelte  LiquidBounceAccount.svelte  RangeSetting.svelte  SelectSetting.svelte  SettingWrapper.svelte  SettingsContainer.svelte  TextSetting.svelte  ToggleSetting.svelte
src/lib/settings/tab/: Tab.svelte  Tabs.svelte
src/lib/stores/: modsStore.js
src/login/: Login.svelte
src/main/content/: LaunchArea.svelte  Options.svelte  UpdateContainer.svelte
src/main/content/changelogs/: NewsContainer.svelte
src/main/content/social-bar/: ButtonSocial.svelte  ButtonText.svelte
src/main/title-bar/: WelcomeMessage.svelte
src/minecraft/: jre_downloader.rs  launcher.rs  mod.rs  prelauncher.rs  progress.rs  rule_interpreter.rs  service.rs  version.rs
src/res/: index.html
src/src/: App.svelte  app.css  main.js
src/src/lib/common/: ButtonClose.svelte  ToolTip.svelte
src/src/lib/common/social/: ButtonIcon.svelte  SocialBar.svelte
src/src/lib/login/: LoginScreen.svelte
src/src/lib/login/loginmodal/: LoginModal.svelte  ModalButton.svelte  ModalInput.svelte
src/src/lib/main/: Account.svelte  ButtonLaunchArea.svelte  ButtonVersion.svelte  LaunchArea.svelte  MainScreen.svelte
src/src/lib/main/log/: LogMessage.svelte
src/src/lib/main/news/: News.svelte  NewsArea.svelte
src/src/lib/settings/: ButtonSetting.svelte  RangeSetting.svelte  RangeSettingStyles.css  SelectSetting.svelte  SettingWrapper.svelte  SettingsContainer.svelte  TextSetting.svelte  ToggleSetting.svelte
src/updater/: mod.rs
src/utils/: mod.rs
unpacker/: Cargo.toml  README.md  build.rs
unpacker/src/: main.rs
