[package]
name = "liquidlauncher"
version = "0.1.0"
authors = ["1zuna <marco@ccbluex.net>", "superblaubeere27"]
edition = "2018"

# Smaller size
[profile.release]
lto = true
codegen-units = 1

[features]
default = ["gui", "cli"]
gui = ["sciter-rs"]
cli = []

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0.56"
thiserror = "1.0"
void = "1"
zip = "0.5.13"
async_zip = "0.0.6"
path-absolutize = "3.0.12"
os_info = "3.2"
regex = "1.5.5"
sciter-rs = { version = "0.5.58", optional = true }
web-view = { version = "0.7", features = ["edge"] }
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

# HTTP library
reqwest = { version = "0.11", features = ["json"] }

# Framework for serializing and deserializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[build-dependencies]
embed-resource = "1.7"