[package]
name = "liquidlauncher"
version = "0.1.0"
authors = ["1zuna <marco@ccbluex.net>", "superblaubeere27"]
edition = "2018"

# Smaller size
[profile.release]
lto = true
codegen-units = 1

[features]
default = ["gui", "cli"]
gui = ["sciter-rs"]
cli = []

[dependencies]
# Log
log = "0.4.16"
env_logger = "0.9.0"

# Async IO
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0.62"
thiserror = "1.0"

# Generic
void = "1"

# FS libs
zip = "0.6.2"
async_zip = "0.0.7"
path-absolutize = "3.0.12"

# OS
os_info = "3.5"

# Data
regex = "1.6.0"
urlencoding = "2.1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# UI library
sciter-rs = { version = "0.5.58", optional = true }
web-view = { version = "0.7", features = ["edge"] }

# HTTP library
reqwest = { version = "0.11", features = ["json"] }

# Framework for serializing and deserializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[build-dependencies]
embed-resource = "1.7"