[package]
name = "liquidlauncher"
version = "0.1.0"
description = "A Tauri App"
authors = ["1zuna <marco@ccbluex.net>", "superblaubeere27"]
license = "GNU General Public License v3.0"
repository = "https://github.com/CCBlueX/LiquidLauncher"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
# Log
log = "0.4.16"
env_logger = "0.9.3"

# Async IO
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0.66"
thiserror = "1.0"

# Generic
void = "1"
rand = "0.8.5"
directories = "4.0"
once_cell = "1.16.0"
open = "3.0.3"

minceraft = { version = "0.2.1", features = ["auth"] }

# FS libs
zip = "0.6.4"
async_zip = "0.0.7"
path-absolutize = "3.0.14"

# OS
os_info = "3.5"
sysinfo = "0.26.7"

# Data
regex = "1.7.0"
urlencoding = "2.1.2"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

sha1 = "0.10.5"
base16ct = {version = "0.1.1", features = ["alloc"] }

# UI library
tauri = {version = "1.2", features = ["api-all", "updater"] }
window-vibrancy = { git = "https://github.com/CCBlueX/window-vibrancy.git" }

# HTTP library
reqwest = { version = "0.11", features = ["json"] }

# Framework for serializing and deserializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/remote-ipc" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/remote-ipc" }
