[package]
name = "liquidlauncher"
version = "0.2.6"
description = "A LiquidBounce launcher for Minecraft, written in Rust using Tauri."
authors = ["1zuna <marco@ccbluex.net>", "superblaubeere27"]
license = "GNU General Public License v3.0"
homepage = "https://liquidbounce.net/"
repository = "https://github.com/CCBlueX/LiquidLauncher"
edition = "2021"
rust-version = "1.71.1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# Async IO
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Generic
void = "1"
rand = "0.8"
directories = "4.0"
once_cell = "1.16.0"

# FS libs
async_zip = { version = "0.0.11", features = ["full"] }
tokio-tar = "0.3.0"
async-compression = { version= "0.3.15", features = ["gzip"] }
sanitize-filename = "0.4.0"
path-absolutize = "3.0"

# OS
os_info = "3"
sysinfo = "0.28"

# Data
regex = "1.7.0"
urlencoding = "2.1"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

sha1 = "0.10"
base16ct = {version = "0.2.0", features = ["alloc"] }

# UI library
tauri = {version = "1.6", features = ["api-all", "updater"] }
window-vibrancy = { git = "https://github.com/CCBlueX/window-vibrancy.git" }

# HTTP library
reqwest = { version = "0.12", features = ["json"] }

# Framework for serializing and deserializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.14"

# MS Authentication support
azalea-auth = { git = "https://github.com/CCBlueX/azalea.git", branch = "custom_auth", package = "azalea-auth" }

md5 = "0.7.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
lto = true
codegen-units = 1
