[package]
name = "unpacker"
version = "0.1.0"
authors = ["1zuna <marco@ccbluex.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Smaller size
[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.66"
rust-embed = { version = "6.5.0", features = ["debug-embed"] }
tempfile = "3.3.0"

[build-dependencies]
embed-resource = "1.7"
